--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #7e3ff2;
+  --ifm-color-primary-dark: #7038da;
+  --ifm-color-primary-darker: #6533c6;
+  --ifm-color-primary-darkest: #5129a0;
+  --ifm-color-primary-light: #8c54f4;
+  --ifm-color-primary-lighter: #9967f5;
+  --ifm-color-primary-lightest: #b28cf7;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(126, 63, 242, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #b28cf7;
+  --ifm-color-primary-dark: #a377f5;
+  --ifm-color-primary-darker: #9967f5;
+  --ifm-color-primary-darkest: #8c54f4;
+  --ifm-color-primary-light: #c3a6f9;
+  --ifm-color-primary-lighter: #d1bbfa;
+  --ifm-color-primary-lightest: #e3d7fc;
+  --docusaurus-highlighted-code-line-bg: rgba(178, 140, 247, 0.2);
 }
+
